--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="cpy">
-            <p>Copyrights @copy; Canon 2021.All rights reserved</p>
+            <p>Copyrights &copy; Canon 2021.All rights reserved</p>
         </div>
     </footer>
     <!-- Fotter section end  -->
